logs/dag_id=user_processing/run_id=manual__2022-07-09T15:20:50.994526+00:00/task_id=populate_customer/attempt=1.log
[2022-07-09 15:20:53,204] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_processing.populate_customer manual__2022-07-09T15:20:50.994526+00:00 [queued]>
[2022-07-09 15:20:53,217] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_processing.populate_customer manual__2022-07-09T15:20:50.994526+00:00 [queued]>
[2022-07-09 15:20:53,218] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-07-09 15:20:53,219] {taskinstance.py:1357} INFO - Starting attempt 1 of 1
[2022-07-09 15:20:53,220] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-07-09 15:20:53,240] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): populate_customer> on 2022-07-09 15:20:50.994526+00:00
[2022-07-09 15:20:53,248] {standard_task_runner.py:52} INFO - Started process 8137 to run task
[2022-07-09 15:20:53,253] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'populate_customer', 'manual__2022-07-09T15:20:50.994526+00:00', '--job-id', '34', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmp_jvv9pl5', '--error-file', '/tmp/tmphgn7vt_v']
[2022-07-09 15:20:53,256] {standard_task_runner.py:80} INFO - Job 34: Subtask populate_customer
[2022-07-09 15:20:53,355] {task_command.py:369} INFO - Running <TaskInstance: user_processing.populate_customer manual__2022-07-09T15:20:50.994526+00:00 [running]> on host 3e3038753a11
[2022-07-09 15:20:53,455] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=populate_customer
AIRFLOW_CTX_EXECUTION_DATE=2022-07-09T15:20:50.994526+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-07-09T15:20:50.994526+00:00
[2022-07-09 15:20:53,468] {base.py:68} INFO - Using connection ID 'postgres' for task execution.
[2022-07-09 15:20:53,474] {dbapi.py:208} INFO - Running statement: 
                INSERT INTO ***_db.customers  VALUES(1,'Mathew','Johnson','Nigeria',mat_jon','m@th3w','jonhmat@gmail.com');
            , parameters: None
[2022-07-09 15:20:53,476] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "m"
LINE 2: ...  VALUES(1,'Mathew','Johnson','Nigeria',mat_jon','m@th3w','j...
                                                             ^

[2022-07-09 15:20:53,487] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=user_processing, task_id=populate_customer, execution_date=20220709T152050, start_date=20220709T152053, end_date=20220709T152053
[2022-07-09 15:20:53,506] {standard_task_runner.py:97} ERROR - Failed to execute job 34 for task populate_customer (syntax error at or near "m"
LINE 2: ...  VALUES(1,'Mathew','Johnson','Nigeria',mat_jon','m@th3w','j...
                                                             ^
; 8137)
[2022-07-09 15:20:53,550] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-07-09 15:20:53,595] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
